...
              style={styles.profileEmail}
            >
              {email}
            </FancyText>

            <FancyButton
              label='Editar perfil'
              icon={{ library: 'FontAwesome6', name: 'user-pen', size: 12 }}
              type='light'
              size={{ w: 142, h: 34 }}
              containerStyle={styles.editButton}
              labelStyle={styles.editButtonLabel}
              labelProps={{ size: 'small', numberOfLines: 1 }}
...
